--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,9 @@
       <version>1.7.12</version>
     </dependency>
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.17</version>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.13.1</version>
     </dependency>
     <dependency>
       <groupId>org.twitter4j</groupId>
